@@ -4,7 +4,7 @@ Title: R Wrapper for the 'Bit.ly' and 'Is.gd'/'v.gd' URL Shortening Services
 Description: Allows using two URL shortening services, which also provide
     expanding and analytic functions. Specifically developed for 'Bit.ly' (which requires OAuth2) and 'is.gd' (no API key).
 Version: 1.0
-Date: 2019-05-24
+Date: 2019-06-15
 Authors@R: 
    c(
     person("John", "Malc", email = "cincenko@outlook.com", role = c("aut", "cre"),  comment = "@dmpe"))
@@ -14,7 +14,7 @@ Depends:
     R (>= 3.6.0)
 Imports:
     httr (>= 1.4.0),
-    jsonlite (>= 1.5),
+    jsonlite (>= 1.6),
     stringr (>= 1.4.0), 
     lubridate (>= 1.7.4), 
     assertthat (>= 0.2.1)
@@ -23,7 +23,7 @@ Suggests:
     knitr (>= 1.21),
     testthat (>= 2.1.1), 
     rmarkdown (>= 1.12),
-    httpuv (>= 1.5.0), 
+    httpuv (>= 1.5.1), 
     stringi (>= 1.4.3), 
     stringr (>= 1.4.0), 
     covr (>= 3.2.1), 
