@@ -25,6 +25,7 @@ export(bitly_retrieve_group_shorten_counts)
 export(bitly_retrieve_groups)
 export(bitly_retrieve_links_grouped)
 export(bitly_retrieve_metrics_by_countries)
+export(bitly_retrieve_metrics_by_referrers)
 export(bitly_retrieve_metrics_by_referrers_by_domain)
 export(bitly_retrieve_org)
 export(bitly_retrieve_org_shorten_counts)
