@@ -2,9 +2,10 @@ For the current development, the user can
 see: https://github.com/dmpe/urlshorteneR
 
 ###
-May 2019       - Update packages to their latest versions
+June 2019      - Update packages to their latest versions
                - Delete goo.gl API from the packages because of being deprecated by Google
-               - Upgrade Bit.ly from v3 API to v4 API
+               - Upgrade Bit.ly from v3 API to v4 API - causing almost a total rewrite of the package,
+               with breaking changes
 
 
 February 2016  - Update packages to their latest versions
